<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameConfigurationFragment"
            type="com.example.taboogame.game.GameConfigurationFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.GameConfigurationFragment"
        android:orientation="vertical"
        >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:text="@string/pick_time_for_round" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/one_minute_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/pick_one_minute" />

            <Button
                android:id="@+id/minute_and_a_half_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_minute_and_a_half"
                />

            <Button
                android:id="@+id/two_minutes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_two_minutes"
                />
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:text="@string/skip_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            >

            <Button
                android:id="@+id/skip_3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_3"
                android:backgroundTint="@color/gray"
                />

            <Button
                android:id="@+id/skip_5_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_5" />

            <Button
                android:id="@+id/skip_10_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_10" />
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:text="@string/points_limit"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/points_20_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_points_20"
                android:backgroundTint="@color/gray"
                />

            <Button
                android:id="@+id/points_30_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_points_30"
                />

            <Button
                android:id="@+id/points_50_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_points_50" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:text="@string/teams_name"
            android:layout_marginBottom="8dp"/>


        <EditText
            android:id="@+id/submit_team_one_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength= "25"
            android:text="@string/team_one_name"
            />

        <EditText
            android:id="@+id/submit_team_two_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength= "25"
            android:text="@string/team_two_name"
            />

        <Button
            android:id="@+id/start_the_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_the_game_button"
            android:layout_gravity="center"
            android:layout_margin="24dp"/>

    </LinearLayout>
</layout>