<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:gravity="center"
        android:textSize="40sp"
        android:background="@android:color/transparent"
        android:text="@string/end_round_header"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/exit_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/do_you_want_to_exit_round"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        >


        <Button
            android:id="@+id/resume_round_button_in_popUp_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="@string/resume_button" />

        <Button
            android:id="@+id/end_round_button_in_popUp_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="@string/end_round_button" />
    </LinearLayout>


</LinearLayout>