<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TitleFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/white">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/application_icon_image"
                android:src="@drawable/main_screen_image"
                app:layout_constraintBottom_toTopOf="@+id/taboo_game_title"
                app:layout_constraintEnd_toEndOf="@+id/taboo_game_title"
                app:layout_constraintStart_toStartOf="@+id/taboo_game_title"
                tools:background="@color/white" />

            <TextView
                android:id="@+id/taboo_game_title"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/title"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/start_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="151dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/start_button"
                app:layout_constraintBottom_toTopOf="@id/rules_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taboo_game_title" />

            <Button
                android:id="@+id/settings_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="151dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/settings_button"
                app:layout_constraintBottom_toTopOf="@id/rules_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_button" />


            <Button
                android:id="@+id/rules_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="151dp"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/rules_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
