<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/next_round_header"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/end_round_header_text"
            android:textSize="40sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:text="@string/team"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/active_team_name_popUpWindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Team 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:text="@string/earned_in_this_round"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/points_in_active_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="30" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:text="@string/next_team"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/next_team_popUp_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Team 2 " />

        </LinearLayout>

        <Button
            android:id="@+id/start_button_in_popUp_window"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/start_button" />

    </LinearLayout>
</layout>
