<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment">

        <ImageView
            android:id="@+id/guess_words_language_button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/country_flag"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/guess_words_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guess_words_language"
            app:srcCompat="@drawable/ic_flag_of_uk" />

        <TextView
            android:id="@+id/vibration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/vibration"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/app_language"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vibration_text" />

        <TextView
            android:id="@+id/guess_words_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/guess_words_language"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_language" />

        <TextView
            android:id="@+id/dark_theme_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/dark_theme"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_words_language" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vibration_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/vibration_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vibration_text" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/dark_theme_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dark_theme_text" />

        <ImageView
            android:id="@+id/app_language_button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/country_flag"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/app_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/app_language"
            app:srcCompat="@drawable/ic_flag_of_uk" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

